<resources>
    <string name="app_name">Imfine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_name">Name</string>
    <string name="label_birthday">Birthday</string>
    <string name="label_register">Register</string>
    <string name="label_start">Start</string>
    <string name="label_todo_list">TODO LIST</string>
    <string name="label_add_task">ADD TASK</string>
    <string name="label_date">Date</string>
    <string name="label_add">ADD</string>
    <string name="label_edit_task">EDIT TASK</string>
    <string name="label_edit">EDIT</string>
    <string name="label_no_todo">Oops! No to-dos here.\nTime to relax!</string>
    <string name="label_task">Task</string>
</resources>