<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="30dp"
    android:paddingTop="35dp"
    tools:context=".todolist.presentation.view.AddEditTodoFragment" >

    <TextView
        android:id="@+id/page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/label_add_task"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_text_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:hint="@string/label_task"
        android:textColorHint="@color/colorHint"
        app:boxStrokeWidth="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_title"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full">

        <EditText
            android:id="@+id/edit_text_task"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="38dp"
            android:paddingLeft="38dp"
            android:paddingEnd="38dp"
            android:paddingRight="38dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_text_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/label_date"
        android:textColorHint="@color/colorHint"
        app:boxStrokeWidth="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_text_task"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full">

        <EditText
            android:id="@+id/edit_text_date"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:inputType="datetime"
            android:paddingStart="38dp"
            android:paddingLeft="38dp"
            android:paddingEnd="38dp"
            android:paddingRight="38dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_edit"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="30dp"
        android:text="@string/label_add"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>