<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    tools:context=".RegisterFragment">

    <ImageButton
        android:id="@+id/btn_profile_image"
        android:layout_width="165dp"
        android:layout_height="165dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/circle_shape"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/photo_camera_white_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:hint="@string/label_name"
        app:boxStrokeWidth="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_profile_image"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full">

        <EditText
            android:id="@+id/edit_text_name"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="38dp"
            android:paddingLeft="38dp"
            android:paddingEnd="38dp"
            android:paddingRight="38dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_text_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/label_birthday"
        app:boxStrokeWidth="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_text_name"
        app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full">

        <EditText
            android:id="@+id/edit_text_birthday"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:inputType="text"
            android:paddingStart="38dp"
            android:paddingLeft="38dp"
            android:paddingEnd="38dp"
            android:paddingRight="38dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="30dp"
        android:text="@string/label_register"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>